a1/brendan_gordon/TEST_PROGRAMS/invalidtype/ethan_macdonald/mult_string_string.min
var s1: string;
var s2: string;
var s3: string;

s1 = "Hello";
s2 = "World";
s3 = s1*s2; #Error: Cannot multiply two strings
